[package]
name = "crs"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "CLI that can make a HTTP request, then sort, filter and display the HTTP response headers."
repository = "https://github.com/Integralist/crs"
readme = "README.md"
categories = ["command-line-interface", "command-line-utilities"]
keywords = ["cli", "http"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.56" }
clap = { version = "3.1.6", features = ["derive"] }
http-serde = { version = "1.1.0" }
owo-colors = { version = "3.3.0", features = ["supports-colors"] }
regex = { version = "1.5.5" }
reqwest = { version = "0.11.10", features = ["blocking"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0" }
