[package]
name = "crs"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "A CLI that can make a HTTP request, then sort, filter and display the HTTP response headers."
repository = "https://github.com/Integralist/crs"
readme = "README.md"
categories = ["command-line-interface", "command-line-utilities"]
keywords = ["cli", "http"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
clap = { version = "3.2.22", features = ["derive"] }
owo-colors = { version = "3.5.0", features = ["supports-colors"] }
regex = "1.6.0"
reqwest = { version = "0.11.12", features = ["blocking"] }

[dev-dependencies]
test_bin = "0.4.0"
